crates/apollo-compiler/test_data/diagnostics/0091_recursive_interface_definition.txt
Error: Transitively implemented interfaces must also be defined on an implementing interface or object
   ╭─[0091_recursive_interface_definition.graphql:1:1]
   │
 1 │ ╭─▶ interface A implements B {
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── A must also be implemented here
 4 │     interface B implements A {
   │                            ┬  
   │                            ╰── implementation of A declared by B here
───╯
Error: Transitively implemented interfaces must also be defined on an implementing interface or object
   ╭─[0091_recursive_interface_definition.graphql:4:1]
   │
 1 │     interface A implements B {
   │                            ┬  
   │                            ╰── implementation of B declared by A here
   │ 
 4 │ ╭─▶ interface B implements A {
   ┆ ┆   
 6 │ ├─▶ }
   │ │       
   │ ╰─────── B must also be implemented here
───╯
Error: fragment `recursive` with type condition `A` cannot be applied to `A`
    ╭─[0091_recursive_interface_definition.graphql:15:9]
    │
  1 │ ╭───▶ interface A implements B {
    ┆ ┆     
  3 │ ├───▶ }
    │ │         
    │ ╰───────── type condition `A` is not assignable to this type
    │ 
  7 │   ╭─▶ fragment recursive on A {
    ┆   ┆   
  9 │   ├─▶ }
    │   │       
    │   ╰─────── fragment declared with type condition `A` here
    │ 
 15 │         get { ...recursive }
    │               ──────┬─────  
    │                     ╰─────── fragment `recursive` cannot be applied
────╯

